--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4 class="title"><a href="">Editing</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <p class="description">Editing is the most companionable form of creation. You do your work quietly, in your own space, then show it to someone else, and they do their work and show it back to you</p>
             </div>
           </div>
 
@@ -270,7 +270,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4 class="title"><a href="">Photography</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <p class="description">When words become unclear, I shall focus with photographs. When images become inadequate, I shall be content with silence.</p>
             </div>
           </div>
 
@@ -278,7 +278,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
               <h4 class="title"><a href="">Branding</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <p class="description">Your brand story is your chance to create memorable customer experiences that can turn brand awareness into brand loyalty.</p>
             </div>
           </div>
 
@@ -561,7 +561,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/laura-free-creative-bootstrap-theme/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="">Vishalin</a>
       </div>
     </div>
   </footer><!-- End Footer -->
